@@ -1,3 +1,12 @@
+2/25 Update
+- added boobies, booty, porngif, redpanda
+- fixed some small things in various commands
+- linted code
+- pls enable/disable nsfw does the whole group
+- changed intro paragraph
+- upped to 96 shards to prevent jake from yelling at me down the line
+
+
 2/22 Update
 
 - added discordmeme, birb
